// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 15.225,
  "accuracyPct": 8.225,
  "atk": 63,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evaRating": 19.200000000000003,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 140,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 50,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 280,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 8.775,
  "accuracyPct": 1.775,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 11.684999999999999,
  "accuracyPct": 4.685,
  "atk": 19,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 47,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 10.825,
  "accuracyPct": 3.8249999999999997,
  "atk": 30,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evaRating": 16.8,
  "evasionPct": 16.8,
  "extraAttackChancePct": 56,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 24,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 112,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 9.175,
  "accuracyPct": 2.175,
  "atk": 38,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 10,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 11.235,
  "accuracyPct": 4.234999999999999,
  "atk": 55,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 0,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 27,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 0,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a4b61cad67c59a54595bfd0d362d12ae071a1271",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "7776b13adf6f893b4bffc6fcaba482d6d9bbe243",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "411629ec416fe329677e3857c56cc5b4665a41a2",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "659e1d0de39e7e59490829150657aefdbc39e60c",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e5d72d0394cf82de1e61abe59cdc08f0384caed7",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "bbe60afb612896d27de210be002499d998dce94a",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 47,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "220c96404ddde447cd28a43b2382b209eb9e064e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 57,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "fd1b94605ec2841853c425f23d1783ca40af1a1d",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "769b5463a69dcbaf09c1271cc38edc60125470b4",
    "outcome": "win",
    "playerHp": 190,
    "playerMp": 92,
    "turns": 18,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "2124f1eed54da88b0164a036c0848571dc3b18ed",
    "outcome": "p1_win",
    "turns": 61,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "395f655058f37694c5de02cda7aee2595757df3f",
    "outcome": "p1_win",
    "turns": 39,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "4807c95f13c965200beb9538a683e97df05f66a8",
    "outcome": "p1_win",
    "turns": 149,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "95c1ecb9e13b9cbdb813cd9629d48ae5b5d5d7ed",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "061e13c6a2750a904c6f53ef39c4d011c6087cc5",
    "outcome": "win",
    "playerHp": 807,
    "playerMp": 227,
    "turns": 29,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "82bc25be2d65fead56db829da3872a7395f9740a",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 26,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "698b28b09e51b1982397c3e4420cc70bcf564b98",
    "outcome": "win",
    "playerHp": 625,
    "playerMp": 227,
    "turns": 56,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "4aa4c9b40214f48d9d11b6866525dca1811cc0f5",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "adfcec5be08af88ceea25b6b331201442b3a380e",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 24,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "8651b08cffbd4ae42821b00475fa8faaff8413a4",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 55,
  },
]
`;
